--- a/index.html
+++ b/index.html
@@ -1,1 +1,78 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Book Database</title>
+    <link rel="stylesheet" href="assets/styles//style.css">
+  </head>
+  <body>
+    <header>
+      <h1>Book Database</h1>
+    </header>
+    <main>
+      <div class="mainBox">
+        <h2>Masukkan Buku Baru</h2>
+        <form>
+          <label>Judul</label>
+          <input type="text" id="judulInput">
+          <label>Penulis</label>
+          <input type="text" id="penulisInput">
+          <label>Tahun</label>
+          <input type="number" id="tahunInput">
+          <label>Selesai dibaca</label>
+          <input type="checkbox" id="alreadyReadCheckbox">
+          <div>
+            <button class="actionButton" id="tambah" type="submit">Tambah</button>
+          </div>
+        </form>
+      </div>
+      <div class="mainBox">
+        <h2>Edit Buku</h2>
+        <form>
+          <fieldset class='editFieldSet' disabled>
+            <label>Judul</label>
+            <input type="text" id="judulEditInput">
+            <label>Penulis</label>
+            <input type="text" id="penulisEditInput">
+            <label>Tahun</label>
+            <input type="number" id="tahunEditInput">
+            <label>Selesai dibaca</label>
+            <input type="checkbox" id="alreadyReadEditCheckbox">
+            <div>
+              <button class="actionButton" id="edit" type="submit">Edit</button>
+            </div>
+          </fieldset>
+        </form>
+      </div>
+      <div class="mainBox" id="searchBox">
+        <h2>Cari Buku</h2>
+        <form>
+          <label>Judul</label>
+          <input type="text" id="judulSearchInput">
+          <div class="searchDiv">
+            <button class="actionButton" id="cari" type="submit">Cari</button>
+          </div>
+        </form>
+      </div>
+      <div class="mainBox">
+        <h2>Belum selesai dibaca</h2>
+        <div class="bookList">
+          <div class="bookItem">
+            <b>Judul buku</b><br>
+            <p>
+              Penulis: Saya sendiri<br>
+              Tahun: 2022
+            </p>
+            <div class="itemButtonBox">
+              <button class="actionButton itemButton" id="toggleSelesaiDibaca">Selesai dibaca</button>
+              <button class="actionButton itemButton" id="hapusBuku">Hapus buku</button>
+              <button class="actionButton itemButton" id="editBuku">Edit buku</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="mainBox">
+        <h2>Selesai dibaca</h2>
+      </div>
+    </main>
+  </body>
+</html>
