--- a/index.html
+++ b/index.html
@@ -55,23 +55,11 @@
       </div>
       <div class="mainBox">
         <h2>Belum selesai dibaca</h2>
-        <div class="bookList">
-          <div class="bookItem">
-            <b>Judul buku</b><br>
-            <p>
-              Penulis: Saya sendiri<br>
-              Tahun: 2022
-            </p>
-            <div class="itemButtonBox">
-              <button class="actionButton itemButton" id="toggleSelesaiDibaca">Selesai dibaca</button>
-              <button class="actionButton itemButton" id="hapusBuku">Hapus buku</button>
-              <button class="actionButton itemButton" id="editBuku">Edit buku</button>
-            </div>
-          </div>
-        </div>
+        <div class="bookList" id="isNotCompletedBookList"></div>
       </div>
       <div class="mainBox">
         <h2>Selesai dibaca</h2>
+        <div class="bookList" id="isCompletedBookList"></div>
       </div>
     </main>
     <script src="assets/scripts/main.js"></script>
