--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
           <input type="text" id="judulSearchInput">
           <div class="searchDiv">
             <button class="actionButton" id="cari" type="submit">Cari</button>
+            <button class="actionButton" id="clear" type="button">Bersihkan pencarian</button>
           </div>
         </form>
       </div>
