--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
       <div class="mainBox" id="searchBox">
         <h2>Cari Buku</h2>
-        <form>
+        <form id="searchForm">
           <label>Judul</label>
           <input type="text" id="judulSearchInput">
           <div class="searchDiv">
