add search warning to search function

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <form id="searchForm">
           <label>Judul</label>
           <input type="text" id="judulSearchInput">
+          <p id="filterWarning" hidden>*filter is on</p>
           <div class="searchDiv">
             <button class="actionButton" id="cari" type="submit">Cari</button>
             <button class="actionButton" id="clear" type="button">Bersihkan pencarian</button>
