add smooth scrolling effect

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </div>
         </form>
       </div>
-      <div class="mainBox">
+      <div class="mainBox" id="editDiv">
         <h2>Edit Buku</h2>
         <form>
           <fieldset class='editFieldSet' disabled>
