move searchWarning toggle function to render function

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
       <div class="mainBox" id="editDiv">
         <h2>Edit Buku</h2>
-        <form>
+        <form id="editBookForm">
           <fieldset class='editFieldSet' disabled>
             <label>Judul</label>
             <input type="text" id="judulEditInput">
